# goit-web-hw-13

./: .env.example  .gitignore  README.md  check_smtp.py  docker-compose.yml  main.py  parse_jwt.py  pyproject.toml  seed.py
Postman/: HW_13_Smoke Tests.postman_collection.json
migrations/: env.py
migrations/versions/: 0002f7dc2e2a_init_db.py
src/: middleware.py  schemas.py
src/conf/: config.py
src/core/: error_handlers.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  debug.py  health.py  users.py
src/services/: auth.py  cache.py  email.py  permissions.py  storage.py
src/services/templates/: email_template.html  reset_password_template.html
